# happ

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  build.rs  clippy.toml  deny.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
assets/: codemirror.bundle.js
packaging/windows/: happ_installer.nsi
scripts/: check-release-deps.sh  smoke-import-remote-charts.sh
src/: assets.rs  batch.rs  chart_analyzer.rs  chart_ir.rs  cli.rs  composeimport.rs  composeinspect.rs  convert.rs  inspectweb.rs  lib.rs  lsp.rs  main.rs  output.rs  process_guard.rs  query.rs  service.rs  source.rs  sprigset.rs  templateanalyzer.rs  templatepolicy.rs  verify.rs  yamlmerge.rs
src/go_compat/: actionparse.rs  backend.rs  call.rs  collections.rs  commandkind.rs  compare.rs  compat.rs  evaldiag.rs  expr.rs  externalfn.rs  ffi_runtime.rs  functions.rs  helm_ir_ffi.rs  mod.rs  parserbridge.rs  path.rs  pipeline_decl.rs  rangeeval.rs  runtime.rs  runtimebridge.rs  scan.rs  textfmt.rs  tokenize.rs  trim.rs  truth.rs  typedvalue.rs  typeutil.rs  utf8scan.rs  valuefmt.rs  varcheck.rs
src/go_compat/analyzer/: aggregate.rs  engine.rs  invocations.rs  syntax.rs  types.rs
src/go_compat/compat/: printf.rs  tests.rs
src/go_compat/go_std/: fmt.rs  mod.rs  text_template.rs
src/go_compat/helm_ir_ffi_helper/: go.mod  go.sum  main.go
src/go_compat/parse/: action.rs  mod.rs  node.rs  parser.rs  report.rs  tree.rs  walk.rs
src/go_compat/runtime/: actionparse.rs  call.rs  collections.rs  commandkind.rs  compare.rs  control.rs  eval.rs  exprkind.rs  externalfn.rs  go_ffi.rs  path.rs  pipeline_decl.rs  rangeeval.rs  tests.rs  textfmt.rs  trim.rs  truth.rs  typeutil.rs  varcheck.rs
src/go_compat/template/: mod.rs  option.rs  template.rs
src/gotemplates/: compat.rs  executor.rs  functions.rs  go_compat.rs  go_parity_map.md  mod.rs  parser.rs  planner.rs  scanner.rs  typedvalue.rs  utf8scan.rs
src/gotemplates/compat/: literals.rs  printf.rs  tests.rs
src/gotemplates/executor/: actionparse.rs  call.rs  collections.rs  commandkind.rs  compare.rs  control.rs  eval.rs  exprkind.rs  externalfn.rs  govaluefmt.rs  path.rs  pipeline_decl.rs  rangeeval.rs  tests.rs  textfmt.rs  tokenize.rs  trim.rs  truth.rs  typeutil.rs  varcheck.rs
src/gotemplates/go_compat/: actionparse.rs  call.rs  collections.rs  commandkind.rs  compare.rs  expr.rs  externalfn.rs  ident.rs  mod.rs  path.rs  pipeline_decl.rs  rangeeval.rs  textfmt.rs  truth.rs  typeutil.rs  valuefmt.rs  varcheck.rs
src/gotemplates/parser/: lex.rs  tests.rs
tests/: gotemplates_executor_parity.rs  gotemplates_go_compat_analyzer_api.rs  gotemplates_go_compat_analyzer_diagnostics.rs  gotemplates_go_compat_analyzer_golden.rs  gotemplates_go_compat_analyzer_parity.rs  gotemplates_go_compat_defined_templates_parity.rs  gotemplates_go_compat_parse_comments_parity.rs  gotemplates_go_compat_parse_nodetype_parity.rs  gotemplates_go_compat_parse_parity.rs  gotemplates_go_compat_source_roundtrip_parity.rs  gotemplates_go_compat_template_delims_parity.rs  gotemplates_go_compat_template_exec_matrix_parity.rs  gotemplates_go_compat_template_parity.rs  gotemplates_go_compat_typed_map_parity.rs  gotemplates_go_error_matrix_parity.rs  gotemplates_go_modes_parity.rs  gotemplates_go_parity.rs  gotemplates_go_parse_cases_parity.rs  gotemplates_go_printf_go_parity.rs  gotemplates_go_std_cmp_subset_parity.rs  gotemplates_go_std_exec_subset_parity.rs  gotemplates_golden.rs  include_profiles_integration.rs  parity_cli.rs  templateanalyzer_integration.rs
tests/gotemplates/: go_printf_cases.rs
tests/gotemplates/golden/: parser_cases.yaml
web/: codemirror-entry.js  eslint.config.mjs  package-lock.json  package.json  playwright.config.mjs
web/tests/: e2e.spec.mjs  visual.spec.mjs
web/tests/baseline/: ui-structure-baseline.json
(+35 files in other folders)
